[58461] feat: add embedding statistics